--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,7 @@ flask==3.0.0
 flask-cors==4.0.0
 
 # Visualization
-pygame>=2.6.0
-
-# LLM Integration
-ollama==0.1.8
-requests==2.31.0
+pygame-ce==2.4.1
 
 # Data Processing
 numpy==1.26.2
@@ -19,4 +15,3 @@ python-dateutil==2.8.2
 
 # Async Support
 aiohttp==3.9.1
-asyncio==3.4.3
